FIX: z-index homepage__head with the call to action

--- a/css/app.css
+++ b/css/app.css
@@ -326,6 +326,7 @@ These styles are required to make icons render reliably */
     padding: 0 20px;
     position: absolute;
     width: 100%;
+    z-index: 10;
 }
 
 .hover__play-song{
